--- a/index.html
+++ b/index.html
@@ -5,11 +5,56 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Form Services</title>
 </head>
 
 <body>
-
+  <div class="container">
+    <div class="image-side">
+      <p class="overlay"><img src="/odin-lined.png" alt=""> Odin</p>
+      <img class="image" src="/mountain.jpg" alt="Bali">
+    </div>
+    <div class="form-side">
+      <p class="intro">This is not a real online service! You know and need something like this in your life to help you
+        realize your
+        deepest dreams. Sign up now to get started.</p>
+      <p class="intro">You <em>know</em> you want to.</p>
+      <form class="form" action="/" method="post">
+        <p class="intro">Let's do this!</p>
+        <div class="form-input">
+          <div>
+            <label for="fname">FIRST NAME</label>
+            <input type="text" id="fname" name="fname" required>
+          </div>
+          <div>
+            <label for="lname">LAST NAME</label>
+            <input type="text" id="lname" name="lname">
+          </div>
+          <div>
+            <label for="mail">EMAIL</label>
+            <input type="email" id="mail" name="mail">
+          </div>
+          <div>
+            <label for="number">PHONE NUMBER</label>
+            <input type="number" id="number" name="number">
+          </div>
+          <div>
+            <label for="pwd">PASSWORD</label>
+            <input type="password" id="pwd" name="pwd" required>
+          </div>
+          <div>
+            <label for="cpwd">CONFIRM PASSWORD</label>
+            <input type="password" id="cpwd" name="cpwd" required>
+          </div>
+        </div>
+        <div class="account-login">
+          <button class="create-account">Create Account</button>
+          <p>Already have an account? <a href="www.youtube.com" class="login">Log in</a></p>
+        </div>
+      </form>
+    </div>
+  </div>
 </body>
 
 </html>
