--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <div class="image-side">
-      <p class="overlay"><img src="/odin-lined.png" alt=""> Odin</p>
+      <p class="overlay"><img src="odin-lined.png" alt=""> Odin</p>
       <img class="image" src="mountain.jpg" alt="Bali">
     </div>
     <div class="form-side">
